# internal/exchange/consumer/validator.go
@@ -22,7 +22,7 @@ func validatePersonal(payload PersonalPayload) string {
 	}
 
 	if !regexDate.MatchString(payload.BirthDate) || !validDate(payload.BirthDate) {
-		return fmt.Sprintf("ivalid value in field 'birth_date'=%s", payload.BirthDate)
+		return fmt.Sprintf("invalid value in field 'birth_date'=%s", payload.BirthDate)
 	}
 
 	if strings.TrimSpace(payload.Contacts.Email) == "" {
@@ -30,7 +30,7 @@ func validatePersonal(payload PersonalPayload) string {
 	}
 
 	if !strings.Contains(payload.Contacts.Email, "@") {
-		return fmt.Sprintf("ivalid value in field 'email'=%s", payload.Contacts.Email)
+		return fmt.Sprintf("invalid value in field 'email'=%s", payload.Contacts.Email)
 	}
 
 	if strings.TrimSpace(payload.Contacts.Phone) == "" {
@@ -49,10 +49,12 @@ func validatePosition(payload PositionPayload) string {
 		return "required field 'department'"
 	}
 
-	if payload.Grade != "" {
-		if _, ok := allowedGrades[payload.Grade]; !ok {
-			return fmt.Sprintf("invalid enum value: grade %s not in allowed grades %v", payload.Grade, allowedGrades)
-		}
+	if payload.Grade == "" {
+		return "required field 'grade'"
+	}
+
+	if _, ok := allowedGrades[payload.Grade]; !ok {
+		return fmt.Sprintf("invalid enum value: grade %s not in allowed grades %v", payload.Grade, allowedGrades)
 	}
 
 	if strings.TrimSpace(payload.EffectiveFrom) == "" {
@@ -60,7 +62,7 @@ func validatePosition(payload PositionPayload) string {
 	}
 
 	if !regexDate.MatchString(payload.EffectiveFrom) || !validDate(payload.EffectiveFrom) {
-		return fmt.Sprintf("ivalid value in field 'date'=%s", payload.EffectiveFrom)
+		return fmt.Sprintf("invalid value in field 'effective_from'=%s", payload.EffectiveFrom)
 	}
 
 	return ""
@@ -72,7 +74,7 @@ func validateHistory(payload HistoryPayload) string {
 	}
 
 	if strings.TrimSpace(payload.Period.From) == "" {
-		return "required field 'period.to'"
+		return "required field 'period.from'"
 	}
 
 	if strings.TrimSpace(payload.Period.To) == "" {
@@ -80,17 +82,17 @@ func validateHistory(payload HistoryPayload) string {
 	}
 
 	if !regexDate.MatchString(payload.Period.From) || !validDate(payload.Period.From) {
-		return fmt.Sprintf("ivalid value in field 'period.from'=%s", payload.Period.From)
+		return fmt.Sprintf("invalid value in field 'period.from'=%s", payload.Period.From)
 	}
 
 	if !regexDate.MatchString(payload.Period.To) || !validDate(payload.Period.To) {
-		return fmt.Sprintf("ivalid value in field 'period.to'=%s", payload.Period.To)
+		return fmt.Sprintf("invalid value in field 'period.to'=%s", payload.Period.To)
 	}
 
 	fromT, _ := time.Parse("2006-01-02", payload.Period.From)
 	toT, _ := time.Parse("2006-01-02", payload.Period.To)
 	if toT.Before(fromT) {
-		return fmt.Sprintf("ivalid value in field 'period'=%s", payload.Period)
+		return fmt.Sprintf("invalid value in field 'period'=%v", payload.Period)
 	}
 
 	return ""
